--- a/configuration.env
+++ b/configuration.env
@@ -2,6 +2,9 @@
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
 GF_INSTALL_PLUGINS=
+GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+GF_AUTH_ANONYMOUS_ENABLED=true
+GF_AUTH_BASIC_ENABLED=false
 
 # InfluxDB options
 INFLUXDB_DB=influx
