--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
-version: '3.6'
+version: "3.8"
 services:
   telegraf:
     image: telegraf:1.18-alpine
     volumes:
-    - ./telegraf/etc/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - ./telegraf/etc/telegraf.conf:/etc/telegraf/telegraf.conf:ro
     depends_on:
       - influxdb
     links:
       - influxdb
     ports:
-    - '127.0.0.1:8125:8125/udp'
+      - "127.0.0.1:8125:8125/udp"
 
   influxdb:
     image: influxdb:1.8-alpine
     env_file: configuration.env
     ports:
-      - '127.0.0.1:8086:8086'
+      - "127.0.0.1:8086:8086"
     volumes:
       - ./:/imports
       - influxdb_data:/var/lib/influxdb
 
   grafana:
-    image: grafana/grafana:8.0.2
+    image: grafana/grafana:latest
     depends_on:
       - influxdb
     env_file: configuration.env
     links:
       - influxdb
     ports:
-      - '127.0.0.1:3000:3000'
+      - "127.0.0.1:3000:3000"
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
